# SimpleChatbotPDF

./: .env  README.md  main.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
