[project]
name = "chat-bot-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docs2txt>=0.1.6",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=2.1.12",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.50.0",
]
